Changed `invariant` Abstraction to `Heuristic` (#128)
