# docs/openapi/swagger.yml
@@ -11,10 +11,10 @@ info:
   version: 0.0.1
 externalDocs:
   description: Find out more about Pessimism's architecture
-  url: 'https://github.com/base-org/pessimism/blob/master/docs/ARCHITECTURE.md'
+  url: 'https://github.com/base-org/pessimism/blob/master/docs/architecture.md'
 tags:
-  - name: invariant
-    description: 'Invariant endpoints'
+  - name: heuristic
+    description: 'Heuristic endpoints'
   - name: system
     description: 'System operations'
 
@@ -34,17 +34,17 @@ paths:
               schema:
                 $ref: '#/components/schemas/HealthResponse'
 
-  /v0/invariant:
+  /v0/heuristic:
     get:
       tags:
-        - invariant
-      summary: Returns an invariant session.
+        - heuristic
+      summary: Returns an heuristic session.
       description: >-
-        Returns invariant session metadata for some specified session uuid. If no uuid is specified, then all sessions are returned. **NOTE - This is currently unimplemented.**
+        Returns heuristic session metadata for some specified session uuid. If no uuid is specified, then all sessions are returned. **NOTE - This is currently unimplemented.**
       parameters:
         - name: uuid
           in: query
-          description: 'Invariant session uuid'
+          description: 'Heuristic session uuid'
           required: false
           schema:
             type: string
@@ -81,41 +81,41 @@ paths:
 
     post:
       tags:
-        - invariant
-      summary: Performs some invariant based system option (ie. starting invariant session, removing session and deleting session)
+        - heuristic
+      summary: Performs some heuristic based system option (ie. starting heuristic session, removing session and deleting session)
       description: >-
-        Returns operation status. Currently only supports running a new invariant session. Updating and deleting are still
+        Returns operation status. Currently only supports running a new heuristic session. Updating and deleting are still
         unimplemented.
       requestBody:
-        description: Invariant input
+        description: Heuristic input
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/InvOperationParameters'
+              $ref: '#/components/schemas/HeuristicOperationParameters'
             examples:
               run:
-                $ref: '#/components/examples/run-inv-example'
+                $ref: '#/components/examples/run-heuristic-example'
               update:
-                $ref: '#/components/examples/update-inv-example'
+                $ref: '#/components/examples/update-heuristic-example'
               delete:
-                $ref: '#/components/examples/delete-inv-example'
+                $ref: '#/components/examples/delete-heuristic-example'
       responses:
         '200':
           description: 'Successful operation.'
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/InvariantResponse'
+                $ref: '#/components/schemas/HeuristicResponse'
               examples:
                 default:
-                  $ref: '#/components/examples/get-inv-result-success'
+                  $ref: '#/components/examples/get-heuristic-response-success'
         '400':
           description: 'Unsuccessful request unmarshaling or validation.'
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/InvariantResponse'
+                $ref: '#/components/schemas/HeuristicResponse'
               examples:
                 default:
                   $ref: '#/components/examples/get-session-dne'
@@ -124,38 +124,38 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/InvariantResponse'
+                $ref: '#/components/schemas/HeuristicResponse'
               examples:
                 default:
-                  $ref: '#/components/examples/get-inv-result-failed-unmarshal'
+                  $ref: '#/components/examples/get-heuristic-result-failed-unmarshal'
 
 components:
   examples:
-    update-inv-example:
+    update-heuristic-example:
       value:
         method: update
         params:
           uuid: 0x420
-          invariant_params:
+          heuristic_params:
             address: 0x420
             upperBound: 666
             lowerBound: 222
 
-    delete-inv-example:
+    delete-heuristic-example:
       value:
         method: delete
         params:
           uuid: 0x420
 
-    run-inv-example:
+    run-heuristic-example:
       value:
         method: run
         params:
           network: layer1
           type: live
-          invariant: balance_enforcement
+          heuristic: balance_enforcement
           alert_destination: slack
-          invariant_params:
+          heuristic_params:
             address: 0x420
             upperBound: 100
             lowerBound: 0
@@ -177,9 +177,9 @@ components:
           uuid: 0x420
           network: layer1
           type: live
-          invariant: balance_enforcement
+          heuristic: balance_enforcement
           alert_destination: slack
-          invariant_params:
+          heuristic_params:
             address: 0x420
             upperBound: 100
             lowerBound: 0
@@ -190,21 +190,21 @@ components:
           deleted: false
 
     get-all-sessions-success:
-      value: {"status": "OK", "result": [{"uuid": "0x420", "network": "layer1", "type": "live", "invariant": "balance_enforcement", "alert_destination": "slack", "invariant_params": {"address": "0x420", "upperBound": 100, "lowerBound": 0}, "status": "running", "created_at": "2021-09-01T00:00:00Z", "updated_at": "2021-09-01T00:00:00Z", "deleted_at": "2021-09-01T00:00:00Z", "deleted": false}]}
+      value: {"status": "OK", "result": [{"uuid": "0x420", "network": "layer1", "type": "live", "heuristic": "balance_enforcement", "alert_destination": "slack", "heuristic_params": {"address": "0x420", "upperBound": 100, "lowerBound": 0}, "status": "running", "created_at": "2021-09-01T00:00:00Z", "updated_at": "2021-09-01T00:00:00Z", "deleted_at": "2021-09-01T00:00:00Z", "deleted": false}]}
 
-    get-inv-result-success:
+    get-heuristic-response-success:
       value:
         data:
           status: OK
-          result: {'invariant_uuid': 0x420}
+          result: {'heuristic_uuid': 0x420}
 
-    get-inv-result-failed-unmarshal:
+    get-heuristic-result-failed-unmarshal:
       value:
         data:
           status: NOTOK
-          result: {'error': 'failed to decode invariant request'}
+          result: {'error': 'failed to decode heuristic request'}
           
-    get-inv-result-internal-error:
+    get-heuristic-result-internal-error:
       value:
         data:
           status: NOTOK
@@ -237,10 +237,10 @@ components:
         - live
         - backtest
 
-    InvariantTypeEnum:
+    HeuristicTypeEnum:
       type: string
       description: >-
-        The invariant type (balance_enforcement).
+        The heuristic type (balance_enforcement).
       enum:
         - balance_enforcement
     
@@ -260,40 +260,40 @@ components:
         - Timestamp
         - Healthy
 
-    ### /v0/invariant POST
-    InvariantResponse:
-      description: Standardized response object for invariant operations. 
+    ### /v0/heuristic POST
+    HeuristicResponse:
+      description: Standardized response object for heuristic operations. 
       properties:
         status:
           type: string
           description: 'Response processing result'
           enum: [OK, NOTOK]
         result:
-          $ref: '#/components/schemas/InvOperationResult' 
+          $ref: '#/components/schemas/HeuristicOpResult' 
           
-    OkInvOperationResult:
+    OkHeuristicOpResult:
       type: object
       description: 'Response result object for successful requests'
       properties:
         uuid:
           type: string
         
-    NotOkInvOperationResult:
+    NotOkHeuristicOpResult:
       description: 'Response result object for failed requests'
       type: object
       properties:
         error:
           type: string
-    InvOperationResult:
+    HeuristicOpResult:
       type: object
       description: 'Response result object'
       oneOf:
-        - $ref: '#/components/schemas/OkInvOperationResult'
-        - $ref: '#/components/schemas/NotOkInvOperationResult'
+        - $ref: '#/components/schemas/OkHeuristicOpResult'
+        - $ref: '#/components/schemas/NotOkHeuristicOpResult'
 
-    BalanceInvConfig:
+    BalanceEnforceCfg:
       type: object
-      description: 'Balance invariant configuration parameters'
+      description: 'Balance heuristic configuration parameters'
       properties:
         address: 
           description: 'Address to monitor'
@@ -309,31 +309,31 @@ components:
         - upperBound
         - lowerBound
 
-    InvConfig: 
+    HeuristicCfg: 
       type: object
-      description: 'Invariant configuration parameters'
+      description: 'Heuristic configuration parameters'
       oneOf:
-        - $ref: '#/components/schemas/BalanceInvConfig'
+        - $ref: '#/components/schemas/BalanceEnforceCfg'
 
-    InvOperationParameters:
-      description: Standardized request object for performing invariant operations.
+    HeuristicOperationParameters:
+      description: Standardized request object for performing heuristic operations.
       properties:
         method:
           type: string
           enum: ['run', 'update', 'delete']
-          description: Invariant method operation that's being invoked.
+          description: Heuristic method operation that's being invoked.
         params:
-          description: Invariant method parameters.
+          description: Heuristic method parameters.
           oneOf:
-            - $ref: '#/components/schemas/RunInvParameters'
-            - $ref: '#/components/schemas/UpdateInvParameters'
-            - $ref: '#/components/schemas/DeleteInvParameters'
+            - $ref: '#/components/schemas/RunHeuristicParams'
+            - $ref: '#/components/schemas/UpdateHeuristicParams'
+            - $ref: '#/components/schemas/DeleteHeuristicParams'
       required:
         - method
         - params
 
     ### method parameter object types 
-    RunInvParameters: # RUN
+    RunHeuristicParams: # RUN
       type: object
       description: Parameters necessary to run a new session.
       properties:
@@ -341,55 +341,55 @@ components:
           $ref: '#/components/schemas/NetworkEnum'
         type: 
           $ref: '#/components/schemas/SessionTypeEnum'
-        invariant:
-          $ref: '#/components/schemas/InvariantTypeEnum'
+        heuristic:
+          $ref: '#/components/schemas/HeuristicTypeEnum'
         alert_destination:
           $ref: '#/components/schemas/AlertDestEnum'
-        invariant_params:
-          $ref: '#/components/schemas/InvConfig'
+        heuristic_params:
+          $ref: '#/components/schemas/HeuristicCfg'
 
-    UpdateInvParameters: #UPDATE
+    UpdateHeuristicParams: #UPDATE
       type: object
       description: Parameters necessary to update an existing session.
       properties:
         uuid:
-          description: 'Invariant session uuid'
+          description: 'Heuristic session uuid'
           type: string
-        invariant_params:
-          description: 'Invariant configuration parameters'
-          $ref: '#/components/schemas/InvConfig' 
+        heuristic_params:
+          description: 'Heuristic configuration parameters'
+          $ref: '#/components/schemas/HeuristicCfg' 
       required:
       - uuid
-      - invariant_params
+      - heuristic_params
 
-    DeleteInvParameters: #DELETE
+    DeleteHeuristicParams: #DELETE
       type: object
       description: Parameters necessary to update an existing session.
       properties:
         uuid:
-          description: 'Invariant session uuid'
+          description: 'Heuristic session uuid'
           type: string
       required:
         - uuid
 
-    ### /v0/invariant GET
+    ### /v0/heuristic GET
     SessionGetResponse:
       type: object
-      description: Metadata for some specified invariant session.
+      description: Metadata for some specified heuristic session.
       properties:
         uuid:
           type: string
-          description: 'Invariant session uuid'
+          description: 'Heuristic session uuid'
         network:
           $ref: '#/components/schemas/NetworkEnum'
         type:
           $ref: '#/components/schemas/SessionTypeEnum'
-        invariant:
-          $ref: '#/components/schemas/InvariantTypeEnum'
+        heuristic:
+          $ref: '#/components/schemas/HeuristicTypeEnum'
         alert_destination:
           $ref: '#/components/schemas/AlertDestEnum'
-        invariant_params:
-          $ref: '#/components/schemas/InvConfig'
+        heuristic_params:
+          $ref: '#/components/schemas/HeuristicCfg'
         status:
           type: string
           description: 'Session status'
