# internal/api/models/heuristic.go
@@ -1,0 +1,141 @@
+package models
+
+import (
+	"math/big"
+	"time"
+
+	"github.com/base-org/pessimism/internal/core"
+)
+
+// HeuristicMethod ... Represents the heuristic operation method
+type HeuristicMethod int
+
+const (
+	Run HeuristicMethod = iota
+	// NOTE - Update is not implemented yet
+	Update
+	// NOTE - Stop is not implemented yet
+	Stop
+)
+
+func StringToHeuristicMethod(s string) HeuristicMethod {
+	switch s {
+	case "run":
+		return Run
+	case "update":
+		return Update
+	case "stop":
+		return Stop
+	default:
+		return Run
+	}
+}
+
+// SessionResponseStatus ... Represents the heuristic operation response status
+type SessionResponseStatus string
+
+const (
+	OK    SessionResponseStatus = "OK"
+	NotOK SessionResponseStatus = "NOTOK"
+)
+
+// SessionRequestParams ... Request params for heuristic operation
+type SessionRequestParams struct {
+	Network       string `json:"network"`
+	PType         string `json:"pipeline_type"`
+	HeuristicType string `json:"type"`
+
+	StartHeight *big.Int `json:"start_height"`
+	EndHeight   *big.Int `json:"end_height"`
+
+	SessionParams map[string]interface{} `json:"heuristic_params"`
+	// TODO(#81): No Support for Multiple Alerting Destinations for an Heuristic Session
+	AlertingDest string `json:"alert_destination"`
+}
+
+// Params ... Returns the heuristic session params
+func (hrp *SessionRequestParams) Params() *core.SessionParams {
+	isp := core.NewSessionParams()
+
+	for k, v := range hrp.SessionParams {
+		isp.SetValue(k, v)
+	}
+
+	return isp
+}
+
+// AlertingDestType ... Returns the alerting destination type
+func (hrp *SessionRequestParams) AlertingDestType() core.AlertDestination {
+	return core.StringToAlertingDestType(hrp.AlertingDest)
+}
+
+// NetworkType ... Returns the network type
+func (hrp *SessionRequestParams) NetworkType() core.Network {
+	return core.StringToNetwork(hrp.Network)
+}
+
+// PipelineType ... Returns the pipeline type
+func (hrp *SessionRequestParams) PipelineType() core.PipelineType {
+	return core.StringToPipelineType(hrp.PType)
+}
+
+// Heuristic ... Returns the heuristic type
+func (hrp *SessionRequestParams) Heuristic() core.HeuristicType {
+	return core.StringToHeuristicType(hrp.HeuristicType)
+}
+
+// GeneratePipelineConfig ... Generates a pipeline config using the request params
+func (hrp *SessionRequestParams) GeneratePipelineConfig(pollInterval time.Duration,
+	regType core.RegisterType) *core.PipelineConfig {
+	return &core.PipelineConfig{
+		Network:      hrp.NetworkType(),
+		DataType:     regType,
+		PipelineType: hrp.PipelineType(),
+		ClientConfig: &core.ClientConfig{
+			Network:      hrp.NetworkType(),
+			PollInterval: pollInterval,
+			StartHeight:  hrp.StartHeight,
+			EndHeight:    hrp.EndHeight,
+		},
+	}
+}
+
+// SessionConfig ... Generates a session config using the request params
+func (hrp *SessionRequestParams) SessionConfig() *core.SessionConfig {
+	return &core.SessionConfig{
+		AlertDest: hrp.AlertingDestType(),
+		Type:      hrp.Heuristic(),
+		Params:    hrp.Params(),
+		PT:        hrp.PipelineType(),
+	}
+}
+
+// SessionRequestBody ... Request body for heuristic operation request
+type SessionRequestBody struct {
+	Method string               `json:"method"`
+	Params SessionRequestParams `json:"params"`
+}
+
+func (irb *SessionRequestBody) Clone() *SessionRequestBody {
+	return &SessionRequestBody{
+		Method: irb.Method,
+		Params: irb.Params,
+	}
+}
+
+// MethodType ... Returns the heuristic method type
+func (irb *SessionRequestBody) MethodType() HeuristicMethod {
+	return StringToHeuristicMethod(irb.Method)
+}
+
+// Result ... Result of heuristic operation
+type Result = map[string]string
+
+// SessionResponse ... Response for heuristic operation request
+type SessionResponse struct {
+	Code   int                   `json:"status_code"`
+	Status SessionResponseStatus `json:"status"`
+
+	Result Result `json:"result"`
+	Error  string `json:"error"`
+}
